<resources>
    <string name="app_name">Recipe App</string>
    <string name="title_activity_crime"></string>
    <string name="recipe_title_hint"></string>
    <string name="recipe_title_label">Recipe Name</string>
    <string name="recipe_details_label">Details</string>
    <string name="recipe_favorited_label">Favorite</string>
    <string name="recipes_title">Recipes</string>
    <string name="date_picker_title">Date of recipe:</string>
    <string name="new_recipe">New Recipe</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="subtitle">We Love FOOD</string>
    <string name="delete_recipe">Delete</string>
    <string name="recipe_information">Recipe Info</string>
    <string name="modify">Modify?</string>
    <string name="change_actionbar_red">Change Actionbar Red</string>
    <string name="change_actionbar_black">Change Actionbar Black</string>
    <string name="delete_all_records">Delete Everything</string>
    <string name="increase_text_size">Increase Text Size</string>
    <string name="decrease_text_size">Decrease Text Size</string>
</resources>
