<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">


    <!--    //title label-->
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_title_label" />

    <!--    title hint-->
    <EditText
        android:id="@+id/recipe_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title_hint"
        android:gravity="center"/>

    <!--    horizontal linear layout-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <!--Recipe date, shows up as abutton-->
        <Button
            android:id="@+id/recipe_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <!--    crime solved label-->
        <CheckBox
            android:id="@+id/recipe_solved"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/recipe_favorited_label" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <!--Recipe details Label-->
    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recipe_details_label" />


    <EditText
        android:id="@+id/recipe_information"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/recipe_title_hint"
        android:gravity="center" />
    <!--Recipe date, shows up as abutton-->


<!--    &lt;!&ndash;    horizontal linear layout&ndash;&gt;-->
<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginLeft="16dp"-->
<!--        android:layout_marginRight="16dp"-->
<!--        android:orientation="horizontal">-->

<!--        &lt;!&ndash;Recipe date, shows up as abutton&ndash;&gt;-->
<!--        <Button-->
<!--            android:id="@+id/recipe_date"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content" />-->

<!--        &lt;!&ndash;    crime solved label&ndash;&gt;-->
<!--        <CheckBox-->
<!--            android:id="@+id/recipe_solved"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:text="@string/recipe_favorited_label" />-->

<!--        <androidx.constraintlayout.widget.ConstraintLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="match_parent">-->

<!--        </androidx.constraintlayout.widget.ConstraintLayout>-->

<!--    </LinearLayout>-->

</LinearLayout>
